--- a/data/templates/nginx.tmpl
+++ b/data/templates/nginx.tmpl
@@ -78,12 +78,32 @@ upstream {{ $host }} {
 	{{/* If only 1 port exposed, use that */}}
 	{{ if eq $addrLen 1 }}
 		{{ $address := index $container.Addresses 0 }}
-		{{ template "upstream" (dict "Container" $container "Address" $address) }}
-	{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
+		# {{$container.Name}}
+		server {{ $address.IP }}:{{ $address.Port }};
+	{{/* If a VIRTUAL_NETWORK is specified use use its IP */}}
+	{{ else if $container.Env.VIRTUAL_NETWORK }}
+			{{ range $network := $container.Networks }}
+					{{ if eq $network.Name $container.Env.VIRTUAL_NETWORK }}
+						# Container: {{$container.Name}}@{{$network.Name}}
+						server {{ $network.IP }}:{{ $container.Env.VIRTUAL_PORT }};
+					{{ end }}
+			{{ end }}
+	{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var */}}
+	{{ else if $container.Env.VIRTUAL_PORT }}
+			{{ range $address := $container.Addresses }}
+					{{ if eq $address.Port $container.Env.VIRTUAL_PORT }}
+						# {{$container.Name}}
+						server {{ $address.IP }}:{{ $address.Port }};
+					{{ end }}
+			{{ end }}
+	{{/* Else default to standard web port 80 */}}
 	{{ else }}
-		{{ $port := coalesce $container.Env.VIRTUAL_PORT "80" }}
-		{{ $address := where $container.Addresses "Port" $port | first }}
-		{{ template "upstream" (dict "Container" $container "Address" $address) }}
+			{{ range $address := $container.Addresses }}
+					{{ if eq $address.Port "80" }}
+						# {{$container.Name}}
+						server {{ $address.IP }}:{{ $address.Port }};
+					{{ end }}
+			{{ end }}
 	{{ end }}
 {{ end }}
 }
